# TDIB-CCD

./: .gitignore  README.md  demo.cpp  xmake.lua
CCD-Query-IO/: .gitignore  CCDQueryIOOptions.cmake.sample  CMakeLists.txt  LICENSE  README.md
CCD-Query-IO/.github/workflows/: continuous.yml
CCD-Query-IO/cmake/ccd_io/: ccd_io_filter_flags.cmake  ccd_io_use_colors.cmake  ccd_io_warnings.cmake
CCD-Query-IO/cmake/recipes/: sample_queries.cmake
CCD-Query-IO/src/ccd_io/: CMakeLists.txt  ccd_query.hpp  logger.cpp  logger.hpp  read_ccd_queries.cpp  read_ccd_queries.hpp
CCD-Query-IO/tests/: CMakeLists.txt  test_read_ccd_queries.cpp
CCD-Query-IO/tests/data/split-ground-truth/: queries.csv
LinearMesh/: demo.cpp  linearGeom.h  linearSolver.h
SimpleMesh/: linearTriMeshCCD.h  linearTriMeshReader.h  scene.cpp
backup/: OBBccd1e-6.yml  bezierVis.cpp  comp-curve.py  generalObj.h  linearTriMeshReader.h  solveNewton.h  solverSampling.h  surfaceMesh.h  test-demo.txt  test-intv.txt  test-robust.txt  test.txt
backup/ccd/: test.cpp  testtri.cpp
backup/dcd/: test.cpp
benchmark/: argsParser.cpp  argsParser.h  linearGeom.h  linearSolver.h  linearSolverBase.h  linearSolverTrad.h  main.cpp  paramBound.h  triBezier.h
ccd/: test.cpp  testtri.cpp
core/: argsParser.cpp  argsParser.h  config.h  math.h  mathOps.h  paramBound.h  paramCCD.cpp  paramCCD.h  paramMesh.h  recBezier.h  recBezierMesh.h  recMesh.h  recRatBezier.h  recRatBezierMesh.h  recRationalBezier.h  sampleCCD.h  solverBase.h  solverBaseManifold.h  solverInitTD.h  solverManifold.h  solverModTD.h  solverModTDv2.h  solverModTDv3.h  solverRobustTD.h  solverSampling.h  solverTD.h  solverTDManifold.h  solverTrad.h  triBezier.h  triMesh.h  triRatBezier.h  utils.h  writeBezierObj.h  writeNURBSObj.h
dcd/: test.cpp
gmp/lib/: libgmp-3.lib  libgmp.la
gmp/lib/pkgconfig/: gmp.pc
linear_tri/: linearGeom.h  linearSolver.h
scene/: config.h  demo.cpp  interval.cpp  scene.cpp  scene.h  scene_examples.h  scene_manifold.h  scene_random.h  utilOps.h  writeBezierObj.cpp  writeBezierObj.h
src/: test.cpp
